--- a/package.json
+++ b/package.json
@@ -9,14 +9,28 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^6.7.0",
+    "@stripe/stripe-js": "^7.3.0",
+    "bcryptjs": "^3.0.2",
+    "coinbase-commerce-node": "^1.0.4",
+    "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.510.0",
+    "next": "15.3.1",
+    "next-auth": "^4.24.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.3.1"
+    "react-range": "^1.10.0",
+    "resend": "^4.5.1",
+    "stripe": "^18.1.0",
+    "swr": "^2.3.3"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^20",
     "@types/react": "^19",
-    "@types/react-dom": "^19"
+    "@types/react-dom": "^19",
+    "prisma": "^6.7.0",
+    "typescript": "^5"
   }
 }
