--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.7.0",
     "@stripe/stripe-js": "^7.3.0",
+    "@types/bcrypt": "^5.0.2",
+    "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "coinbase-commerce-node": "^1.0.4",
     "jsonwebtoken": "^9.0.2",
